===============================================================================
cqsh - ChangeLog
===============================================================================

* 2006-12-17
    * Major code re-factoring
    * Removed old XDBC/XQRunner code. Now using XCC
    * Updated to jline 0.9.9
    * Changed build environment to use maven
    * Started on junit tests.

* 2006-02-13
    * JLine wasn't properly detecting the Terminal type when run through
      cygwin. Now passing UnixTerminal as a vm option. Patch by Matt Griffin.

* 2006-02-07
    * Applied cygwin patch by Matt Griffin

* 2005-09-21
    * Released version 0.0.3

* 2005-09-20
    * Added command line option --uri or -n to specify a full uri for a single
      document being loaded
    * Also added --uri or -n to the load command within the shell
    * Fixed bug in ls command which split XPath statements on whitespace. It is
      now possible to run "ls /* except(/root1, /root2)" which will list uri's 
      that do not match the specified root nodes.

* 2005-08-29
    * Added command line option --load or -l to load files from command line.
    * Added command line option --uriprefix or -i which specifies a uri prefix
      to append to the uri's created when loading files
    * Added -i option to load command within shell to specify uri prefix      
    * Added new command 'cp' to copy documents -- Contributed by Ryan Grimm

* 2005-08-07
    * Added command line option --format or -F to pretty print xml output from 
      the command line.
    * Upgraded xdbc jars to 2.2.8
    * Upgraded xqrunner jar to 0.7.2       

* 2005-08-01
    * Added "use" command similiar to MySQL use. Changes the default database
      which queries are eval'ed in.
    * Modified ls, rm, and cat commands to eval in current database 

* 2005-07-31
    * Added pretty-print-xml config option
    * Added eval-in support to ls and cat commands

* 2005-07-27